--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   "author": "Nathaniel",
   "license": "MIT",
   "devDependencies": {
-    "@tsconfig/svelte": "^5.0.0",
-    "@types/node": "^16.11.6",
-    "@typescript-eslint/eslint-plugin": "5.29.0",
-    "@typescript-eslint/parser": "5.29.0",
-    "builtin-modules": "3.3.0",
-    "esbuild": "0.17.3",
-    "esbuild-svelte": "^0.7.4",
-    "obsidian": "latest",
-    "svelte": "^4.1.2",
-    "svelte-preprocess": "^5.0.4",
-    "tslib": "2.4.0",
-    "typescript": "4.7.4"
+    "@tsconfig/svelte": "^3.0.0",
+		"@types/node": "^16.11.6",
+		"@typescript-eslint/eslint-plugin": "5.29.0",
+		"@typescript-eslint/parser": "5.29.0",
+		"builtin-modules": "3.3.0",
+		"dotenv": "^16.0.3",
+		"esbuild": "0.14.47",
+		"esbuild-svelte": "^0.7.1",
+		"obsidian": "latest",
+		"tslib": "2.4.0",
+		"typescript": "4.7.4",
+		"svelte": "^3.50.1",
+		"svelte-preprocess": "^4.10.7"
   },
   "homepage": ""
 }
